# signalpilot-cli

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  SP CLI SPEC v2.md  SPEC-MVP.md  SPEC-R-SUPPORT.md  docker-compose.yml  docker-test.sh  install.sh  pyproject.toml
.backups/: README.md  default-pyproject.toml
.backups/.signalpilot/: user-cli.toml  user-jupyter_server_config.py  user-sp-core.toml
.backups/.signalpilot/defaults/: cli.toml  jupyter_server_config.py  sp-core.toml
.backups/connect/: .env.example  db.toml  mcp.json
.backups/connect/folders/: manifest.toml
.backups/default-rules/: analyze.md  explain.md  investigate.md
.backups/default-skills/data-visualization/: SKILL.md
.backups/system/: version.toml
.backups/system/migrations/: .gitkeep
defaultSignalPilotHome/: dev-pyproject.toml  pyproject.toml  start-here.ipynb
defaultSignalPilotHome/team-workspace/notebooks/: .gitkeep
defaultSignalPilotHome/team-workspace/rules/: .gitkeep
defaultSignalPilotHome/team-workspace/scripts/: .gitkeep
defaultSignalPilotHome/team-workspace/skills/: skill-upload-registry.json
defaultSignalPilotHome/user-workspace/: pyproject.toml
sp/: __init__.py  config.py  main.py  upgrade_check.py
sp-v0/: __init__.py  config.py
sp-v0/commands/: __init__.py  install.py  upgrade.py
sp-v0/ui/: console.py
sp/commands/: activate.py  init.py  lab.py  status.py
sp/core/: __init__.py  environment.py  jupyter.py
sp/ui/: __init__.py
tests/: test_cli.py
