[project]
name = "sp-cli"
version = "0.2.0"
description = "SignalPilot CLI - Your Trusted CoPilot for Data Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SignalPilot Inc.", email = "info@signalpilot.ai"}
]
keywords = ["jupyter", "data-analysis", "notebook", "ai", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://signalpilot.dev"
Repository = "https://github.com/SignalPilot-Labs/sp-cli"
Documentation = "https://signalpilot.dev/docs"

[project.scripts]
sp = "sp.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sp"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
