[project]
name = "signalpilot-workspace"
version = "0.1.0"
description = "SignalPilot workspace environment"
requires-python = ">=3.10"

dependencies = [
    # Core data analysis
    "pandas>=2.0",
    "numpy>=1.24",

    # Jupyter environment
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",

    # Database connectivity
    "sqlalchemy>=2.0",
    "duckdb>=0.9",
    "pyarrow>=14.0",

    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "plotly>=5.0",

    # Utilities
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
# Database connectors
snowflake = ["snowflake-connector-python>=3.0"]
bigquery = ["google-cloud-bigquery>=3.0", "db-dtypes>=1.0"]
postgres = ["psycopg[binary]>=3.0"]
mysql = ["pymysql>=1.0"]
redshift = ["redshift-connector>=2.0"]

# Advanced visualization
viz = ["altair>=5.0", "bokeh>=3.0"]

# Machine learning
ml = [
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "scipy>=1.11",
]

# Data processing
processing = [
    "polars>=0.19",
    "pyarrow>=14.0",
]

# All extras
all = [
    "snowflake-connector-python>=3.0",
    "google-cloud-bigquery>=3.0",
    "psycopg[binary]>=3.0",
    "altair>=5.0",
    "scikit-learn>=1.3",
    "polars>=0.19",
]

[tool.signalpilot]
# SignalPilot-specific configuration
default_kernel = "python3"
auto_install_deps = true

[tool.ruff]
# Code formatting and linting
line-length = 100
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
